Added bare bones html for design

--- a/index.html
+++ b/index.html
@@ -5,8 +5,62 @@
     <meta charset="utf-8">
 
     <title>1.4-tshirt</title>
+
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
+    <div class="wrapper">
+        <div class="item">
+            <div class="top">
+                <img src="http://placecage.com/300/300" alt="cage">
+                <div class="flip"></div>
+            </div>
+            <div class="buttons">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="price">
+                <p>Nicolas Cage Appearance Fee</p>
+                <p>$29</p>
+            </div>
+        </div>
+        <div class="item">
+            <div class="top">
+                <img src="http://fillmurray.com/300/300" alt="cage">
+                <div class="flip"></div>
+            </div>
+            <div class="buttons">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="price">
+                <p>Bill Murray Appearance Fee</p>
+                <p>$999</p>
+            </div>
+        </div>
+        <div class="item">
+            <div class="top">
+                <img src="http://stevensegallery.com/300/300" alt="cage">
+                <div class="flip"></div>
+            </div>
+            <div class="buttons">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="price">
+                <p>Steven Segal Appearance Fee</p>
+                <p>$999</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
