--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <div class="item">
             <div class="top">
                 <img src="http://placecage.com/300/300" alt="cage">
-                <div class="flip"></div>
+                <div class="flip"><p>x</p></div>
             </div>
             <div class="buttons">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div><p>C</p></div>
+                <div><p>A</p></div>
+                <div><p>G</p></div>
+                <div><p>E</p></div>
+                <div><p>1</p></div>
             </div>
             <div class="price">
                 <p>Nicolas Cage Appearance Fee</p>
@@ -30,14 +30,14 @@
         <div class="item">
             <div class="top">
                 <img src="http://fillmurray.com/300/300" alt="cage">
-                <div class="flip"></div>
+                <div class="flip"><p>x</p></div>
             </div>
             <div class="buttons">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div><p>B</p></div>
+                <div><p>I</p></div>
+                <div><p>L</p></div>
+                <div><p>L</p></div>
+                <div><p>1</p></div>
             </div>
             <div class="price">
                 <p>Bill Murray Appearance Fee</p>
@@ -47,14 +47,14 @@
         <div class="item">
             <div class="top">
                 <img src="http://stevensegallery.com/300/300" alt="cage">
-                <div class="flip"></div>
+                <div class="flip"><p>x</p></div>
             </div>
             <div class="buttons">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div><p>S</p></div>
+                <div><p>T</p></div>
+                <div><p>E</p></div>
+                <div><p>V</p></div>
+                <div><p>E</p></div>
             </div>
             <div class="price">
                 <p>Steven Segal Appearance Fee</p>
