made images local, kept attempting pop-up

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="wrapper">
         <div class="item">
             <div class="top">
-                <img src="http://placecage.com/300/300" alt="cage">
-                <div class="flip"><p>x</p></div>
+                <img src="images/placecage-300x300.jpg" alt="Nicolas Cage">
+                <div class="flip"><p>⤿</p></div>
             </div>
             <div class="buttons">
                 <div><p>C</p></div>
@@ -47,8 +47,8 @@
         </div>
         <div class="item">
             <div class="top">
-                <img src="http://fillmurray.com/300/300" alt="cage">
-                <div class="flip"><p>x</p></div>
+                <img src="images/fillmurray-300x300.jpg" alt="Bill Murray">
+                <div class="flip"><p>⤿</p></div>
             </div>
             <div class="buttons">
                 <div><p>B</p></div>
@@ -64,8 +64,8 @@
         </div>
         <div class="item">
             <div class="top">
-                <img src="http://stevensegallery.com/300/300" alt="cage">
-                <div class="flip"><p>x</p></div>
+                <img src="images/stevensegallery-300x300.jpg" alt="Steven Segal">
+                <div class="flip"><p>⤿</p></div>
             </div>
             <div class="buttons">
                 <div><p>S</p></div>
