got pop-up-menu to show up, still need to tweak triangle, hover

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
                 <div><p>A</p></div>
                 <div><p>G</p></div>
                 <div><p>E</p></div>
-                <div>
-                    <ul class="pop-up-menu">
+                <div class="pop-up-menu">
+                    <p>1</p>
+                    <ul>
                         <li>
                             <p>5</p>
                         </li>
@@ -34,10 +35,8 @@
                         <li>
                             <p>2</p>
                         </li>
-                        <li>
-                            <p>1</p>
-                        </li>
                     </ul>
+                    <!-- <div class="triangle"></div> -->
                 </div>
             </div>
             <div class="price">
