coninued working on pop up and flip

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <div class="wrapper">
         <div class="item">
             <div class="top">
-                <img src="images/placecage-300x300.jpg" alt="Nicolas Cage">
+                <div class="card">
+                    <div class="front">
+                        <img src="images/placecage-300x300.jpg" alt="Nicolas Cage">
+                    </div>
+                    <div class="back">
+                        <img src="mages/placecage-300x300-back.jpg" alt="back">
+                    </div>
+                </div>
                 <div class="flip"><p>⤿</p></div>
             </div>
             <div class="buttons">
@@ -36,7 +43,6 @@
                             <p>2</p>
                         </li>
                     </ul>
-                    <!-- <div class="triangle"></div> -->
                 </div>
             </div>
             <div class="price">
@@ -46,7 +52,14 @@
         </div>
         <div class="item">
             <div class="top">
-                <img src="images/fillmurray-300x300.jpg" alt="Bill Murray">
+                <div class="card">
+                    <div class="front">
+                        <img src="images/fillmurray-300x300.jpg" alt="Bill Murray">
+                    </div>
+                    <div class="back">
+                        <img src="mages/fillmurray-300x300-back.jpg" alt="back">
+                    </div>
+                </div>
                 <div class="flip"><p>⤿</p></div>
             </div>
             <div class="buttons">
@@ -54,7 +67,23 @@
                 <div><p>I</p></div>
                 <div><p>L</p></div>
                 <div><p>L</p></div>
-                <div><p>1</p></div>
+                <div class="pop-up-menu">
+                    <p>1</p>
+                    <ul>
+                        <li>
+                            <p>5</p>
+                        </li>
+                        <li>
+                            <p>4</p>
+                        </li>
+                        <li>
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <p>2</p>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div class="price">
                 <p>Bill Murray Appearance Fee</p>
@@ -63,11 +92,34 @@
         </div>
         <div class="item">
             <div class="top">
-                <img src="images/stevensegallery-300x300.jpg" alt="Steven Segal">
+               <div class="card">
+                    <div class="front">
+                        <img src="images/stevensegallery-300x300.jpg" alt="Steven Segal">
+                   </div>
+                    <div class="back">
+                        <img src="images/stevensegallery-300x300-back.jpg" alt="back">
+                    </div>
+                </div>
                 <div class="flip"><p>⤿</p></div>
             </div>
             <div class="buttons">
-                <div><p>S</p></div>
+                <div class="pop-up-menu">
+                    <p>S</p>
+                    <ul>
+                        <li>
+                            <p>L</p>
+                        </li>
+                        <li>
+                            <p>A</p>
+                        </li>
+                        <li>
+                            <p>G</p>
+                        </li>
+                        <li>
+                            <p>E</p>
+                        </li>
+                    </ul>
+                </div>
                 <div><p>T</p></div>
                 <div><p>E</p></div>
                 <div><p>V</p></div>
